deploy spring